--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="activated_text">Activated</string>
     <string name="android_tv_only_toast">This application works only on Android TV devices.</string>
     <string name="authentication_not_possible">Can\'t authenticate</string>
-    <string name="authentication_required">In order to use Ace TV services, you must sign-in.</string>
+    <string name="authentication_required">In order to use Tsutaeru, you must sign-in to your provider.</string>
     <string name="catchup_title">TV Catchup</string>
     <string name="change_user_title">Change user</string>
     <string name="channel_genre_title">Channel genre</string>
@@ -16,7 +16,7 @@
     <string name="channel_logo_description">Displays the channel\'s logo on the EPG interactive guide when using the Live Channels application. (Might take a bit of time for a full sync)</string>
     <string name="channel_region_title">Channel regions</string>
     <string name="channel_region_description">Enables a region to be watched with Live TV.\n\nNote: You might have to reselect the related channels in the Live TV app if a region is being re-added.</string>
-    <string name="channel_stream_failure">Stream failure. Please try again later or contact Ace TV</string>
+    <string name="channel_stream_failure">Stream failure. Please try again later or contact your IPTV provider</string>
     <string name="connect_text">Connect</string>
     <string name="channel_update">Updating channels&#8230;</string>
     <string name="clear_cache_title">Clear database cache?</string>
@@ -72,7 +72,7 @@
     <string name="ok_text">Ok</string>
     <string name="password_text">Password</string>
     <string name="provider_url_text">Provider URL</string>
-    <string name="tv_input_label">Ace TV</string>
+    <string name="tv_input_label">Tsutaeru</string>
     <string name="restart_live_channels">Please restart your Live TV app for the changes to be applied.</string>
     <string name="region_international">International</string>
     <string name="region_na">North America (USA/CA)</string>
@@ -92,7 +92,7 @@
     <string name="username_text">Username</string>
     <string name="username_parameter_text">Username: %1$s</string>
     <string name="version_text">Version: %1$s</string>
-    <string name="video_not_playable">The video cannot be played! Please contact Ace TV</string>
+    <string name="video_not_playable">The video cannot be played! Please contact your IPTV provider.</string>
     <string name="vod_text">VOD</string>
     <string name="welcome_text">Welcome</string>
     <string name="wont_be_long_text">It won\'t be too long&#8230;</string>
