Add more possibilities for a provider's URL input
It might be possible that a user will enter the input of a url different
from "http://example.com:8080". In this case let AsyncAuthValidateInfo
verify that the url can be correct before continuing with the validation.

Also add some examples as to what is considered valid for the user.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,7 +39,7 @@
     <string name="download_update_text">Download update</string>
     <string name="enter_password_title">Please enter your password</string>
     <string name="enter_provider_url_title">Please enter your provider\'s URL</string>
-    <string name="enter_provider_url_description">Example: http://test.com:8080</string>
+    <string name="enter_provider_url_description">Examples:\n- http://test.com:8080\n- http://test.com:8080/\n- test.com:8080\n- test.com:8080/</string>
     <string name="enter_username_title">Please enter your username</string>
     <string name="epg_offset_title">TV Catchup EPG offset</string>
     <string name="epg_offset_title_short">EPG offset</string>
